--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td><img src="images/bryan.png" alt="Bryan's personal photo"></td>
+    <td><img src=bryan.png" alt="Bryan's personal photo"></td>
     <td><h1>Bryan Šumanjski</h1>
     <p><em>Najbolji <a href="https://hr.wikipedia.org/wiki/Momak">dečko</a> <strong>svih vremena.</strong></em></p>
     <p><strong>Moja djevojka Katarina zna da sam najbolji dečko svih vremena.</strong></p></td>
