--- a/contact-me.html
+++ b/contact-me.html
@@ -10,6 +10,7 @@
     <p>555-555-555</p>
     <p>myemail@gmail.com</p>
 <hr>
+    <input type="date">
     <form action="mailto:bryansumanjski@gmail.com" method="post"enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
